terraform/modules/ec2/main.tf
resource "aws_security_group" "ec2-sg"{
  name = "${var.name}-sg"
  description = "EC2 Security Group"
  vpc_id = var.vpc_id

   ingress {
      description = "SSH"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
   }

   ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    ="tcp"
    cidr_blocks  = ["0.0.0.0/0"]
   }

   ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    ="tcp"
    cidr_blocks  = ["0.0.0.0/0"]
   }


   egress {
    from_port   = 0
    to_port     = 0
    protocol    ="-1"
    cidr_blocks = ["0.0.0.0/0"]
   }
}

resource "aws_instance" "server" {
  ami = var.ami_id
  instance_type = var.instance_type
  subnet_id = var.subnet_id
  security_groups = [aws_security_group.ec2-sg.id]
  key_name = "mukesh"
    root_block_device{
    volume_size = 8
    volume_type = "gp3"
    encrypted = true
  }
  tags = merge(
  var.tags,
  {
    Name              = var.name
    Environment       = "test"
    TTL               = "Apr 12"
  }
)
}
